--- a/src/components/PSelect/PSelect.scss
+++ b/src/components/PSelect/PSelect.scss
@@ -35,11 +35,9 @@ $select-error-font-size: $form-control-error-font-size !default;
 $select-error-spacing: $form-control-error-spacing !default;
 
 .p-select {
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 
   .label {
     color: $select-label-color;
@@ -137,6 +135,7 @@ $select-error-spacing: $form-control-error-spacing !default;
 
 .p-select-options {
   padding: calc($select-item-spacing / 2) 0;
+  position: relative;
 
   .option {
     color: $select-color;
